reflect Constraint change from int to QueryOp